// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hooks (es5) - onAssign() when draft is an array assign 1`] = `
Array [
  Array [
    0,
    0,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an array push 1`] = `
Array [
  Array [
    0,
    4,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an array splice (length += 0) 1`] = `
Array [
  Array [
    1,
    0,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an array splice (length += 1) 1`] = `
Array [
  Array [
    1,
    0,
  ],
  Array [
    2,
    0,
  ],
  Array [
    3,
    3,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an array splice (length -= 1) 1`] = `
Array [
  Array [
    0,
    6,
  ],
  Array [
    1,
    3,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an array unshift 1`] = `
Array [
  Array [
    0,
    0,
  ],
  Array [
    1,
    1,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an object assign 1`] = `
Array [
  Array [
    "a",
    1,
  ],
  Array [
    "c",
    1,
  ],
]
`;

exports[`hooks (es5) - onAssign() when draft is an object nested assignments 1`] = `
Array [
  Array [
    "c",
    2,
  ],
  Array [
    "b",
    Object {
      "c": 2,
      "e": 1,
    },
  ],
  Array [
    "a",
    Object {
      "b": Object {
        "c": 2,
        "e": 1,
      },
    },
  ],
]
`;

exports[`hooks (es5) - onDelete() when draft is an array - length = 0 1`] = `
Array [
  Array [
    0,
  ],
]
`;

exports[`hooks (es5) - onDelete() when draft is an array - pop 1`] = `
Array [
  Array [
    0,
  ],
]
`;

exports[`hooks (es5) - onDelete() when draft is an array - splice (length -= 1) 1`] = `
Array [
  Array [
    2,
  ],
]
`;

exports[`hooks (es5) - onDelete() when draft is an object - delete 1`] = `
Array [
  Array [
    "a",
  ],
  Array [
    "c",
  ],
]
`;

exports[`hooks (es5) - onDelete() when draft is an object - nested deletions 1`] = `
Array [
  Array [
    "c",
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is a Map assign 1`] = `
Array [
  Array [
    "a",
    10,
  ],
  Array [
    Object {
      "prop": "val1",
    },
    11,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is a Map nested assignments 1`] = `
Array [
  Array [
    "b",
    2,
  ],
  Array [
    Object {
      "prop": "val1",
    },
    Map {
      "b" => 2,
      "d" => 1,
    },
  ],
  Array [
    "a",
    Map {
      Object {
        "prop": "val1",
      } => Map {
        "b" => 2,
        "d" => 1,
      },
    },
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is a Set assign 1`] = `
Array [
  Array [
    "a",
    Set {
      1,
      2,
      3,
      4,
    },
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is a Set delete 1`] = `
Array [
  Array [
    "a",
    Set {
      2,
      3,
    },
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is a Set nested assignments 1`] = `
Array [
  Array [
    "a",
    Set {
      "a",
      Set {
        1,
        2,
      },
    },
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array assign 1`] = `
Array [
  Array [
    0,
    0,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array push 1`] = `
Array [
  Array [
    0,
    4,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array splice (length += 0) 1`] = `
Array [
  Array [
    1,
    0,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array splice (length += 1) 1`] = `
Array [
  Array [
    1,
    0,
  ],
  Array [
    2,
    0,
  ],
  Array [
    3,
    3,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array splice (length -= 1) 1`] = `
Array [
  Array [
    0,
    6,
  ],
  Array [
    1,
    3,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an array unshift 1`] = `
Array [
  Array [
    0,
    0,
  ],
  Array [
    1,
    1,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an object assign 1`] = `
Array [
  Array [
    "a",
    1,
  ],
  Array [
    "c",
    1,
  ],
]
`;

exports[`hooks (proxy) - onAssign() when draft is an object nested assignments 1`] = `
Array [
  Array [
    "c",
    2,
  ],
  Array [
    "b",
    Object {
      "c": 2,
      "e": 1,
    },
  ],
  Array [
    "a",
    Object {
      "b": Object {
        "c": 2,
        "e": 1,
      },
    },
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is a Map - delete 1`] = `
Array [
  Array [
    "a",
  ],
  Array [
    Object {
      "prop": "val1",
    },
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is a Map - nested deletions 1`] = `
Array [
  Array [
    "b",
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is an array - length = 0 1`] = `Array []`;

exports[`hooks (proxy) - onDelete() when draft is an array - pop 1`] = `
Array [
  Array [
    "0",
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is an array - splice (length -= 1) 1`] = `
Array [
  Array [
    "2",
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is an object - delete 1`] = `
Array [
  Array [
    "a",
  ],
  Array [
    "c",
  ],
]
`;

exports[`hooks (proxy) - onDelete() when draft is an object - nested deletions 1`] = `
Array [
  Array [
    "c",
  ],
]
`;
